change 'amongst' to 'among' in modernized editions

--- a/journal/modernized/02-journal.adoc
+++ b/journal/modernized/02-journal.adoc
@@ -547,7 +547,7 @@ Oh how does my heart rejoice in the unclouded belief of his happiness;
 safely landed on Emmanuel`'s shore,
 he can now no more be assailed by the trials and conflicts of time.
 Through infinite love he has, I cannot doubt,
-obtained a blessed inheritance amongst the saints in
+obtained a blessed inheritance among the saints in
 light! "`Blessed are the dead who die in the Lord.`"
 
 6mo. 19th.--Took leave of dear +++______+++, how sweet is the feeling
@@ -762,7 +762,7 @@ if you would proceed on your journey towards Zion--look not back,
 but press forwards in the way of righteousness,
 even in "`the narrow way of the redeemed!`"
 The prospect of parting from you,
-and especially from those amongst you whom I have been endeavouring to lead to Jesus,
+and especially from those among you whom I have been endeavouring to lead to Jesus,
 and leaving you to proceed on your way as it were alone, has at times felt very painful;
 but to Him who has so sweetly, so graciously led me onwards--to Him,
 my beloved brothers and sister--I believe I may commend you; and oh,
@@ -962,7 +962,7 @@ Wash me, O gracious Father, and prepare me, I earnestly crave,
 as a vessel for your own use; do with me as seems you good,
 and make me all I ought to be.
 During the last week, I have, in an especial manner,
-desired to see an increase of Christian love amongst us; oh,
+desired to see an increase of Christian love among us; oh,
 how I do desire that this may increase and abound.
 
 13th.--This evening gave way, in some degree, to unprofitable conversation.
@@ -1407,7 +1407,7 @@ until she has a well grounded hope of "`acceptance in the Beloved.`"
 Much do I desire that every affliction permitted to
 attend her may bring her nearer the source of all good!
 In the contemplation of danger in her present attack,
-the fervent prayer of my soul has been, that she may not be taken from amongst us,
+the fervent prayer of my soul has been, that she may not be taken from among us,
 till she has found Him to be her Saviour whom she has so long sought sorrowing.
 I felt comforted in the remembrance of the promises,
 "`Whatsoever you shall ask the Father, in my name, He will give it you; and,
@@ -1507,7 +1507,7 @@ I fear I am too much wrapped up in many of my earthly friends--how do I, at this
 long for ability to hold the gift in subordination to the Giver.
 Attended the monthly meeting--painfully interested do I
 feel on behalf of our society in this place;
-and oh, how do I long to see an increase of that love amongst us which casts out fear.
+and oh, how do I long to see an increase of that love among us which casts out fear.
 
 26th.--After six days of much outward bustle,
 inexpressibly precious is the thought of a day of rest!
@@ -2194,7 +2194,7 @@ in all her steps in life`'s rugged way.
 27th.--In the last week, my spirit has often been oppressed with discouragement,
 my hands have often been ready to hang down in the work assigned me, I believe,
 by my heavenly Shepherd; but I do at this season, feel renewed confidence,
-that He will bless the labours made for His name amongst His little ones; and I long,
+that He will bless the labours made for His name among His little ones; and I long,
 in the retrospect of the past week, while humbled under a sense of my own unworthiness,
 to be enabled more steadily to press forwards, more constantly looking unto Jesus,
 in whose strength alone can I hope to conquer my many spiritual enemies.
@@ -2442,7 +2442,7 @@ help graciously vouchsafed--truly my God is indeed "`a God at hand.`"
 I was permitted to know a portion of such sweet peace, as, for a short season,
 seemed to lift me "`above this lower world.`"
 Inexpressibly sweet was the thought, that more pure, more holy,
-is the joy of my endeared friend, who has lately been taken from amongst us;
+is the joy of my endeared friend, who has lately been taken from among us;
 why should we then mourn for her departure?
 Rather let us strive, with increased earnestness, to pursue our heavenly journey,
 "`looking unto Jesus.`"
@@ -2686,7 +2686,7 @@ In the afternoon, had a pleasant ride with my valued friends to.
 
 18th.--This morning my heart was bowed with earnest desires to go faithfully on my way.
 
-26th.-- Rose with earnest desire that the bread this day dispensed amongst us,
+26th.-- Rose with earnest desire that the bread this day dispensed among us,
 may be especially blessed to my dearest S+++______+++. For her, dining the past week,
 I have indeed been introduced into the baptism of suffering.
 During the morning meeting, I walked in a barren way, but after some time,
@@ -4227,7 +4227,7 @@ feelings of my heart--it has been a week marked by some memorable events,
 and deep mental suffering.
 After serious consideration of the subject,
 it has been thought best for me to return to my beloved family.
-And now amongst them,
+And now among them,
 I desire to give up my whole heart to the solemn work of preparation,
 whether it be for life or death! to seek more and more
 of the fulness of the blessings of the gospel!
