--- a/journal/modernized/03-letters.adoc
+++ b/journal/modernized/03-letters.adoc
@@ -454,9 +454,9 @@ Next week our quarterly meeting is to be held here.
 I trust it may prove a satisfactory one; but I grieve to see the desire,
 I fear increasing, to watch the words of all, to find out,
 not whether they belong to Christ, but on which side they are,
-amongst the members of our part of the church militant.
+among the members of our part of the church militant.
 Amidst the feelings of discouragement and depression,
-caused by contemplating the state of things amongst us, it is consolatory and cheering,
+caused by contemplating the state of things among us, it is consolatory and cheering,
 at seasons, to look forward to the time when all the frailties,
 of which we have now so many, shall be forever cast aside,
 and bright and glorious shall be the Christian`'s rest!
@@ -614,10 +614,10 @@ both here and hereafter,
 by leading us to contemplate the taking away the
 veil which separates us from the eternal scene,
 to behold the fulness of the glory of those who have gone before us into heaven.
-On another occasion he strikingly alluded to the state of things amongst us,
+On another occasion he strikingly alluded to the state of things among us,
 entreating us, while with godly jealousy we watch over the foundation, Christ Jesus,
 never to mar or tamper with the beautiful superstructure.
-He believed the spiritual views of our society were spreading amongst other Christians,
+He believed the spiritual views of our society were spreading among other Christians,
 but it was not the time for us to lower our standard, etc. etc.
 
 [.letter-heading]
@@ -954,7 +954,7 @@ which is indeed painfully calculated to divide in Jacob,
 and to scatter in Israel.
 
 The instances you mention, as lately placed before you, of the uncertainty of life,
-are indeed striking; and I trust would convey a lesson to many amongst you.
+are indeed striking; and I trust would convey a lesson to many among you.
 How very great is the individual work, to the consideration of which,
 these things should lead us!
 Surely, surely, we have no time for controversy;
@@ -1053,7 +1053,7 @@ and our lamps burning!
 Another week is nearly come to a close,
 and before the time arrives for me to seek repose,
 I must lay aside my pen to have a little quietness, for "`talking with my past hours.`"
-It is cheering to think, that many dear to me, and amongst them yourself, my dear mother,
+It is cheering to think, that many dear to me, and among them yourself, my dear mother,
 may be engaged in a similar manner.
 Surely, self-examination is a duty incumbent upon us all.
 
