prefer 'towards Zion' over 'Zionward' in modernized editions

--- a/journal/modernized/02-journal.adoc
+++ b/journal/modernized/02-journal.adoc
@@ -28,7 +28,7 @@ another added to the cloud of witnesses,
 to the truth and faithfulness of our God--the love and mercy of our Saviour.
 
 It is believed that the perusal of this memoir,
-may tend to the encouragement of those whose faces are set Zionwards,
+may tend to the encouragement of those whose faces are set towards Zion,
 and yet whose hands are often ready to hang down--that
 instruction may be reaped by these from the experience of her
 whose short life is sketched in the following pages.
@@ -741,13 +741,13 @@ that if we seek first "`the kingdom of God and His righteousness,
 all things necessary will be added thereto`"! To some of you,
 the Christian`'s path may often have appeared a trying one; but let me assure you,
 the trials and sufferings which are permitted to
-attend the traveller Zionward--and of which,
-in some degree,
-I have been a partaker--are indeed "`not worthy to be
-compared`" to the joy which is set before them.
+attend the traveller Zionward--
+and of which, in some degree, I have been a partaker--
+are indeed "`not worthy to be compared`"
+to the joy which is set before them.
 We must bear the cross, before we can expect to receive the crown;
-and most earnestly do I desire, that all my beloved family may "`so run,
-that they may obtain`"!
+and most earnestly do I desire, that all my beloved family may
+"`so run, that they may obtain`"!
 
 My long confinement has led me, perhaps,
 peculiarly to prize a silent waiting upon God--a part
@@ -1159,7 +1159,7 @@ Bless the Lord O my soul; in much love has He been pleased, I confidently believ
 to afflict me.
 
 In the evening, I was again permitted a season of extreme anguish,
-from the overwhelming fear of having retarded the children`'s progress Zionward,
+from the overwhelming fear of having retarded the children`'s progress towards Zion,
 for lack of entire faithfulness.
 Oh that this suffering may have the designed effect,
 although it does indeed appear as a "`fiery baptism;`" still, however,
@@ -2085,7 +2085,7 @@ The love and mercy of my heavenly Shepherd have, during the last week,
 been afresh and preciously manifested towards His very unworthy child;
 and oh that in the ensuing one,
 I may be enabled with fresh diligence to pursue my
-journey Zionward--may every thought be scrutinized;
+journey towards Zion--may every thought be scrutinized;
 may I be strengthened to bring all things to the light,
 that it may be made manifest which are wrought of God.
 May He be graciously pleased to strengthen me to
@@ -3828,7 +3828,7 @@ the felt influences of your Spirit for myself and loved ones.--I watched the
 new year in with ardent desires after strength for all my need during it.
 
 1837 1mo. 14th.-- Recurring to the past week ought deeply to humble me.
-I have through unwatchfulness, become far too lukewarm in my progress Zionwards.
+I have through unwatchfulness, become far too lukewarm in my progress towards Zion.
 I have need, indeed,
 to fear "`the treacherous calm,`" and yet I fear I do not do so sufficiently.
 The many ways in which the enemy of our souls presents himself to us, have,
@@ -4186,7 +4186,7 @@ I would ask your blessing--bring them nearer and
 nearer to yourself by the cords of your love;
 sanctify to them every trial you permit to be their portion,
 and finally enable them to rejoice in your salvation.
-To those of my much loved brothers and sisters who have set their faces Zionward,
+To those of my much loved brothers and sisters who have set their faces towards Zion,
 be a shield from all the darts of the enemy,
 and strengthen them to go forwards--enabling them confidently to
 trust that you will be also their "`exceeding great reward!`"
